# ibv

./: Cargo.toml  README.md
.cargo/: config
docs/: bug_record.md  env.md  todo.md
examples/: benchmark.rs  client.rs  com.rs  devices.rs  server.rs  test.rs
src/: lib.rs
src/connection/: client.rs  conn.rs  daemon.rs  mod.rs  server.rs
src/ibverbs/: mod.rs
src/types/: cq.rs  default.rs  device.rs  mod.rs  mr.rs  pd.rs  qp.rs  wr.rs
