[package]
name = "ibv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-sys = {git = "https://github.com/mond77/rdma-sys.git" }
clippy-utilities = "0.1.0"
tokio = { versoin = "1.15", features = ["full"]}
serde = { version = "1", features = ["derive"]}
bincode = "1.3.3"
kanal = "0.1.0-pre8"